provisioning/apps/overlays/k3d-dev/webserver/ingress-k3d.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-k3d-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: keycloak-operator-traefik-forward-auth@kubernetescrd

spec:
  rules:
  - host: webserver.k3d-dev.lessingstrasse.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: webserver-svc
            port:
              number: 80

  tls:
  - hosts:
    - webserver.k3d-dev.lessingstrasse.org
    secretName: webserver.k3d-dev.lessingstrasse.org
